Overflow fix

--- a/components/map/widgets/Widgets.module.css
+++ b/components/map/widgets/Widgets.module.css
@@ -62,6 +62,7 @@
   margin-top:calc(-100vh + 50px);
   z-index:5;
   pointer-events: none;
+  overflow:hidden;
 }
 
 .widgetActiveCell {
